# KataForge

./: .env.example  .gitignore  CODEBASE_INDEX.md  Caddyfile  DOCUMENTATION_UPDATE_SUMMARY.md  LICENSE  Makefile  README.md  VOICE_IMPLEMENTATION_PLAN.md  add_kataforge_headers_safe.py  docker-compose.yml  flake.nix  pyproject.toml
config/: base.yaml  framework16.yaml  framework16_production.yaml
config/profiles/: rocm.yaml
docker/: entrypoint-full.sh
docs/: API_REFERENCE.md  CLI_REFERENCE.md  CONFIGURATION.md  GPU_SETUP.md  MODEL_UPDATE_PROCEDURE.md  ROCM_INTEGRATION_SUMMARY.md  ROCM_READY_TO_TRAIN.md  ROCM_SETUP_FRAMEWORK16.md  SYSTEM_READY_FINAL.md  dataset_processing.md  system_overview.md  voice_system.md
kataforge/: __init__.py
kataforge/api/: security.py  server.py
kataforge/biomechanics/: calculator.py  calculator.py.bak
kataforge/cli/: main.py
kataforge/core/: __init__.py  error_handling.py  error_integration_examples.py  error_integration_examples.py.bak  gpu_utils.py  logging.py  logging.py.bak  security.py  security.py.bak  settings.py
kataforge/llm/: __init__.py  __init__.py.bak  ollama_client.py  ollama_client.py.bak  prompts.py  prompts.py.bak
kataforge/ml/: __init__.py  data_loader.py  data_loader.py.bak  inference.py  models.py  models.py.bak  trainer.py  trainer.py.bak
kataforge/preprocessing/: mediapipe_wrapper.py  mediapipe_wrapper.py.bak  video_preprocessor.py  video_preprocessor.py.bak
kataforge/profiles/: manager.py  manager.py.bak
kataforge/ui/: __init__.py  __init__.py.bak  gradio_app.py  theme.py
kataforge/voice/: __init__.py  __init__.py.bak  audio_utils.py  audio_utils.py.bak  stt.py  stt.py.bak  tts.py  tts.py.bak  voice_manager.py  voice_manager.py.bak
scripts/: config_validator.py  framework16-quickstart.sh  system_repair.py  system_validator.py
tests/: conftest.py
tests/integration/: test_api.py  test_api.py.bak
tests/unit/: test_api_server.py  test_error_handling.py  test_ml_inference.py
