[tool.poetry]
name = "kataforge"
version = "0.1.0"
description = "Martial Arts Preservation & Training System"
authors = ["DeMoD LLC <dev@demod.llc>"]
license = "Proprietary"
readme = "README.md"
homepage = "https://github.com/demod-llc/dojo-manager"
repository = "https://github.com/demod-llc/dojo-manager"
documentation = "https://docs.demod.llc/dojo-manager"
keywords = ["martial-arts", "biomechanics", "machine-learning", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "kataforge"}]

[tool.poetry.scripts]
dojo-manager = "kataforge.cli.main:main"

[tool.poetry.dependencies]
scikit-learn = "^1.3.0"
influxdb-client = "^1.36.0"
python = "^3.11"

# Core dependencies
numpy = "^1.26.0"
scipy = "^1.11.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Computer Vision
opencv-python = "^4.8.0"
mediapipe = "^0.10.0"
pillow = "^10.1.0"

# Machine Learning
torch = "^2.1.0"
torchvision = "^0.16.0"
torch-geometric = "^2.4.0"
onnx = "^1.15.0"
onnxruntime = "^1.16.0"

# API & Server
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = ">=0.0.9,<1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aiofiles = "^23.2.0"

# Database
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"

# Caching & Queues
redis = "^5.0.0"
celery = {extras = ["redis"], version = "^5.3.0"}

# Monitoring & Logging
structlog = "^23.2.0"
python-json-logger = "^2.0.7"
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"

# CLI
click = "^8.1.7"
rich = "^13.7.0"
typer = "^0.12.0"

# UI
gradio = "^4.44.0"

# LLM Integration
ollama = "^0.3.0"

# Configuration
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
toml = "^0.10.2"

# Utilities
httpx = "^0.27.0"
tenacity = "^8.2.3"
tqdm = "^4.66.0"
filelock = "^3.13.0"

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
# GPU-specific dependencies
torch = {version = "^2.1.0", source = "pytorch-gpu"}
torchvision = {version = "^0.16.0", source = "pytorch-gpu"}

[tool.poetry.group.training]
optional = true

[tool.poetry.group.training.dependencies]
# Training-specific tools
tensorboard = "^2.15.0"
wandb = "^0.16.0"
mlflow = "^2.8.0"
optuna = "^3.4.0"

[tool.poetry.group.ui]
optional = true

[tool.poetry.group.ui.dependencies]
# UI-specific dependencies (for standalone UI deployment)
gradio = "^4.44.0"
ollama = "^0.3.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
pytest-timeout = "^2.2.0"
hypothesis = "^6.92.0"

# Code Quality
black = "^23.11.0"
ruff = "^0.6.0"
mypy = "^1.7.0"
isort = "^5.12.0"

# Type stubs
types-redis = "^4.6.0"
types-pyyaml = "^6.0.12"
types-toml = "^0.10.8"

# Documentation
sphinx = "^7.2.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^1.25.0"
myst-parser = "^2.0.0"

# Development tools
ipython = "^8.17.0"
ipdb = "^0.13.13"
pre-commit = "^3.5.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^1.25.0"
myst-parser = "^2.0.0"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "PT",   # flake8-pytest-style
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "ERA",  # eradicate
    "PL",   # pylint
    "TRY",  # tryceratops
]
ignore = [
    "E501",   # line too long (handled by black)
    "PLR0913", # too many arguments
    "TRY003",  # long exception message
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["ARG", "PLR2004"]

[tool.ruff.isort]
known-first-party = ["kataforge"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "mediapipe.*",
    "torch.*",
    "torchvision.*",
    "torch_geometric.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=kataforge",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "gpu: marks tests as requiring GPU",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["kataforge"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["kataforge"]
known_third_party = [
    "cv2",
    "mediapipe",
    "torch",
    "numpy",
    "fastapi",
    "pydantic",
]

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B601"]

[tool.vulture]
exclude = ["tests/", "docs/"]
ignore_decorators = ["@app.route", "@click.command"]
min_confidence = 80